convert image to webp

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-stylus": "^2.7.1",
+    "gulp-webp": "^4.0.1",
     "postcss": "^8.4.6",
     "sass": "^1.49.7",
     "terser-webpack-plugin": "^5.3.1",
